--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -145,22 +145,55 @@
      grid-template-areas:
        ".";
    }
-
 .text{
-  .text{
-  overflow: hidden;
-  white-space: nowrap;
-  animation: text 15s linear infinite;
+    width: 100%;
+    background: #FF029C;
+    padding: 20px;
+    -webkit-box-sizing: border-box;
+   }
 }
-.text:hover {
-  animation-play-state: paused;
+  @-webkit-keyframes scroll {
+    0% {
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0);
+    }
+    100% {
+        -webkit-transform: translate(-100%, 0);
+        transform: translate(-100%, 0)
+    }
 }
-@keyframes text {
-  from { text-indent: 100%}
-  to { text-indent: -100%}
+
+@-moz-keyframes scroll {
+    0% {
+        -moz-transform: translate(0, 0);
+        transform: translate(0, 0);
+    }
+    100% {
+        -moz-transform: translate(-100%, 0);
+        transform: translate(-100%, 0)
+    }
 }
-.i2{
-  width: 100%;
-  grid-area: box2;
-  height: 40vw;
+
+@keyframes scroll {
+    0% {
+        transform: translate(0, 0);
+    }
+    100% {
+        transform: translate(-100%, 0)
+    }
+}
+
+.marquee {
+    display: block;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.marquee span {
+    display: inline-block;
+    padding-left: 100%;
+    -webkit-animation: scroll 20s infinite linear;
+    -moz-animation: scroll 50s infinite linear;
+    animation: scroll 10s infinite linear;
 }
