--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -144,6 +144,20 @@
      grid-template-areas:
        ".";
    }
+   .im1{
+     width: 100%;
+      height: 100%;
+      position: relative;
+      display: inline-block;
+      vertical-align: top;
+   }
+   .im2{
+     width: 100%;
+      height: 100%;
+      position: relative;
+      display: inline-block;
+      vertical-align: top;
+   }
 .text{
     width: 100%;
     background: #FF029C;
