--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   display: grid;
   grid-template-columns: 0.5fr 2fr 0.5fr 1fr;
   grid-template-rows: 1.5fr 2fr;
@@ -15,7 +16,7 @@
 }
 
 .box2 {
-      background-color: green;
+      background-color: black;
      grid-area: box2;
    }
 
@@ -39,6 +40,7 @@
    grid-area: box6;
  }
  .container2 {
+   position: relative;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
@@ -72,6 +74,7 @@
    background-color: red;
  }
  .container3 {
+   position: relative;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
@@ -94,6 +97,7 @@
     grid-area: box11;
   }
   .container4 {
+    position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr ;
@@ -117,6 +121,7 @@
    }
    .container5 {
      display: grid;
+     position: relative;
      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
      grid-template-rows: 1fr ;
      grid-auto-columns: 1fr;
@@ -136,6 +141,7 @@
      grid-area: box17;
    }
    .container6 {
+     position: relative;
      display: grid;
      grid-template-columns: 1fr;
      grid-template-rows: 0.5fr;
@@ -152,7 +158,7 @@
       vertical-align: top;
    }
    .im2{
-     width: 100%;
+     max-width: 100%
       height: 100%;
       position: relative;
       display: inline-block;
