--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -1,26 +1,38 @@
 .container {
   display: grid;
   position: relative;
-  grid-template-columns: 0.5fr 2fr 0.5fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-auto-flow: row;
+  grid-template-columns: 1.21fr 3.95fr 1fr 2fr;
+  grid-template-rows: 2fr 1.5fr;
   grid-template-areas:
-    "box1 box2 box3 box4"
-    "box1 box5 box3 box6"
+    "box1 b2 box3 box4"
+    "box1 b5 box3 box6"
 }
 
 .box1 {
   background-color: blue;
   grid-area: box1;
-  height: 100vw;
 }
 
 .box2 {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      height: 35vw;
       background-color: black;
-     grid-area: box2;
+      grid-area: b2;
    }
 
+
+
+
+.im3{
+ width: 146px;
+  height: 846px;
+}
 .box3 {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     background-color: black;
      grid-area: box3;
    }
@@ -32,7 +44,7 @@
 
 .box5 {
     background-color: pink;
-     grid-area: box5;
+     grid-area: b5;
    }
 
 .box6 {
@@ -44,9 +56,6 @@
   position: relative;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  grid-auto-columns: 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
   grid-template-areas:
     "box7 box7 box7 box7 box8 box8"
     "box9 box10 box10 box10 box8 box8"
@@ -78,8 +87,6 @@
    position: relative;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
-   grid-auto-columns: 1fr;
-   grid-auto-flow: row;
    grid-template-areas:
      "box11 box11 box11 box12 box12 box12"
      "box11 box11 box11 box12 box12 box12"
@@ -101,9 +108,7 @@
     position: relative;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr ;
-    grid-auto-columns: 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
+
     grid-template-areas:
       "box13 box13 box13 box14 box14"
       "box13 box13 box13 box14 box14";
@@ -124,15 +129,12 @@
      position: relative;
      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
      grid-template-rows: 1fr ;
-     grid-auto-columns: 1fr;
-     grid-auto-flow: row;
      grid-template-areas:
        "box16 box16 box17 box17 box17"
    }
 
    .box16 {
      background-color: magenta;
-     height: 100vw;
      grid-area: box16;
    }
 
@@ -158,8 +160,6 @@
       vertical-align: top;
    }
    .im2{
-     max-width: 100%
-      height: 100%;
       position: relative;
       display: inline-block;
       vertical-align: top;
