--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -49,7 +49,7 @@
    }
 
 .box6 {
-  background-color: magenta;
+  background-color: black;
    grid-area: box6;
  }
  .container2 {
@@ -186,7 +186,7 @@
      width: 100%;
       position: relative;
       display: inline-block;
-      vertical-align: top;
+      vertical-align: center;
       object-fit: cover;
    }
    .im6{
@@ -195,6 +195,13 @@
       position: relative;
       display: inline-block;
       vertical-align: top;
+      object-fit: cover;
+   }
+   .im7{
+     width: 100%;
+      height: 100%;
+      position: relative;
+      display: inline-block;
       object-fit: cover;
    }
 .text{
