--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -1,12 +1,13 @@
 .container {
   display: grid;
   position: relative;
-  grid-template-columns: 1.21fr 3.95fr 0.5fr 2fr;
-  grid-template-rows: 2fr 2fr;
+  grid-template-columns: 1.21fr 3.95fr 1fr 2fr;
+  grid-template-rows: 2fr 1.5fr;
   grid-template-areas:
     "box1 b2 box3 box4"
     "box1 b5 box3 box6"
 }
+
 
 .box1 {
   background-color: blue;
@@ -65,12 +66,12 @@
 
 .box7 {
   grid-area: box7;
-  background-color: blue;
+  background-color: black;
 }
 
 .box8 {
   grid-area: box8;
-  background-color: pink;
+  background-color: black;
   height: 100vw;
 }
 
@@ -198,11 +199,11 @@
       object-fit: cover;
    }
    .im7{
-     width: 100%;
+     width: 70vw;
       height: 100%;
       position: relative;
       display: inline-block;
-      object-fit: cover;
+      object-fit: fill;
    }
 .text{
     width: 100%;
