--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,23 +1,5 @@
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-  /* iPad Portrait */
-  @media all and (max-width: 1340px) {
-
-   @media all and (min-width: 1020px) {
-  	 img { width: 700px;
-  	 display: block;
-  	 }
-   }/* при размере в 1020px картинка начинает занимать всю ширину экрана
-   Элемент <article>представляет собой независимый фрагмент веб-страницы*/
-
-   @media all and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-   article > * { width: calc(100% - 40px); }
-   img { width: 700px;
-   display: block;
-  }/*  */
-   @media all and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: portrait) {
-   body { min-width: 250px; }
-   article > * { width: 100%}
-   }/* для вертикально расположенного телефона */
-   @media all and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: portrait) {
-   body { mix-width: 100%; }}
-  article > * { width: 100%}
+@media only screen and (min-width: 1224px) and (max-device-width: 1400px){
+  /* Desktop */
+  }
+  @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  /* iPad */
