--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -1,8 +1,8 @@
 .container {
   display: grid;
   position: relative;
-  grid-template-columns: 1.21fr 3.95fr 1fr 2fr;
-  grid-template-rows: 2fr 1.5fr;
+  grid-template-columns: 1.21fr 3.95fr 1fr 2fr ;
+  grid-template-rows: 0.5fr 0.5fr;
   grid-template-areas:
     "box1 b2 box3 box4"
     "box1 b5 box3 box6"
@@ -56,7 +56,7 @@
  .container2 {
   display: grid;
   position: relative;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 3fr 1fr 2fr;
   grid-template-rows: 1fr 1fr 1fr;
   grid-template-areas:
     "box7 box7 box7 box7 box8 box8"
@@ -70,19 +70,30 @@
 }
 
 .box8 {
+  display: relative;
+  align-items: center;
+  justify-content: space-around;
+  max-width:100%;
+    background-color: black;
   grid-area: box8;
-  background-color: black;
-  height: 100vw;
 }
 
 .box9 {
+  display: relative;
+  align-items: center;
+  justify-content: space-around;
+  max-width:100%;
   grid-area: box9;
-  background-color: green;
+  background-color: black;
 }
 
 .box10 {
+  display: relative;
+  align-items: center;
+  justify-content: space-around;
+  max-width:100%;
    grid-area: box10;
-   background-color: red;
+   background-color: black;
  }
  .container3 {
    display: grid;
@@ -199,7 +210,28 @@
       object-fit: cover;
    }
    .im7{
-     width: 70vw;
+     width: 100%;
+      height: 100%;
+      position: relative;
+      display: inline-block;
+      object-fit: fill;
+   }
+   .im8{
+     width: 50vw;
+      height: 100%;
+      position: relative;
+      display: inline-block;
+      object-fit: fill;
+   }
+   .im9{
+     width: 100%;
+      height: 100%;
+      position: relative;
+      display: inline-block;
+      object-fit: fill;
+   }
+   .im10{
+     width: 50vw;
       height: 100%;
       position: relative;
       display: inline-block;
