--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -199,7 +199,7 @@
       position: relative;
       display: inline-block;
       vertical-align: center;
-      object-fit: cover;
+      object-fit: fill;
    }
    .im6{
      width: 100%;
@@ -221,21 +221,21 @@
       height: 100%;
       position: relative;
       display: inline-block;
-      object-fit: fill;
+      object-fit: cover;
    }
    .im9{
      width: 100%;
-      height: 100%;
+     height: 100%;
       position: relative;
       display: inline-block;
       object-fit: fill;
    }
    .im10{
-     width: 50vw;
+     width: 100%;
       height: 100%;
       position: relative;
       display: inline-block;
-      object-fit: fill;
+      object-fit: cover;
    }
 .text{
     width: 100%;
