--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -18,7 +18,7 @@
       display: flex;
       align-items: center;
       justify-content: space-around;
-      height: 35vw;
+      height: 100%;
       background-color: black;
       grid-area: b2;
    }
@@ -35,7 +35,7 @@
   display: relative;
   align-items: center;
   justify-content: space-around;
-  height: 35vw;
+  height: 100%;
     background-color: #FF029C;
      grid-area: box4;
    }
