--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -41,7 +41,7 @@
    }
 
 .box5 {
-  display: relative;
+  display: flex;
   align-items: center;
   justify-content: space-around;
   max-width:100%;
@@ -196,12 +196,25 @@
       vertical-align: top;
         object-fit: cover;
    }
+   .
    .im5{
      width: 100%;
-      display: flex;
+     height: 100%;
       position: relative;
-      vertical-align: center;
-      object-fit: fill;
+      object-fit: cover;
+   }
+   .im5.1{
+     width: 100%;
+     height: 100%;
+      position: relative;
+      object-fit:fill;
+   }
+   .im5.2{
+     position: relative;
+     width: 100%;
+     height: 100%;
+      object-fit:fill;
+   }
    }
    .im6{
      width: 100%;
