--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -269,7 +269,7 @@
       height: 100%;
       position: relative;
       align-items: center;
-      object-fit: fill;
+      object-fit: cover;
    }
 .text{
     width: 100%;
