--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -32,7 +32,7 @@
    }
 
 .box4 {
-  display: relative;
+  position:relative;
   align-items: center;
   justify-content: space-around;
   height: 100%;
@@ -70,7 +70,7 @@
 }
 
 .box8 {
-  display: relative;
+  position:relative;
   align-items: center;
   justify-content: space-around;
   max-width:100%;
@@ -110,36 +110,45 @@
 
 
  .box11 {
-   display: relative;
+   position:relative;
    align-items: center;
    justify-content: space-around;
    width:100%;
     grid-area: box11;
   }
   .box12 {
-    background-color: black;
+    position:relative;
+    align-items: center;
+    justify-content: space-around;
+    max-width:100%;
      grid-area: box12;
    }
   .container4 {
     display: grid;
     position: relative;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr ;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr  ;
 
     grid-template-areas:
       "box13 box13 box13 box14 box14"
       "box13 box13 box13 box14 box14";
   }
 
-  .box13 {
-    background-color: green;
-    height: 100vw;
-    grid-area: box13;
+  .box13  {
+    position:relative;
+    align-items: center;
+    justify-content: space-around;
+    max-width:100%;
+     grid-area: box10;
+     background: url('../images/Group 208.svg');
+     background-color: black;
   }
 
   .box14 {
     background-color: red;
      grid-area: box14;
+     background: url('../images/Group 208.svg');
+     background-color: black;
    }
    .container5 {
      display: grid;
@@ -198,7 +207,7 @@
       vertical-align: top;
         object-fit: cover;
    }
-   .
+   
    .im5{
      width: 100%;
      height: 100%;
@@ -269,6 +278,22 @@
       height: 100%;
       position: relative;
       align-items: center;
+      object-fit: cover;
+   }
+   .im13{
+     display: grid;
+     width: 100%;
+      height: 100%;
+      position: relative;
+      align-items: top;
+      object-fit: cover;
+   }
+   .im14{
+     display: grid;
+     width: 100%;
+      height: 100%;
+      position: relative;
+      align-items: top;
       object-fit: cover;
    }
 .text{
