--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -41,7 +41,7 @@
    }
 
 .box5 {
-  display: flex;
+  display: inline-block;
   align-items: center;
   justify-content: space-around;
   max-width:100%;
@@ -70,6 +70,7 @@
 }
 
 .box8 {
+  display: inline-block;
   position:relative;
   align-items: center;
   justify-content: space-around;
@@ -126,8 +127,8 @@
   .container4 {
     display: grid;
     position: relative;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr  ;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
+    grid-template-rows: 1fr 1fr  ;
 
     grid-template-areas:
       "box13 box13 box13 box14 box14"
@@ -139,34 +140,42 @@
     align-items: center;
     justify-content: space-around;
     max-width:100%;
-     grid-area: box10;
+     grid-area: box13;
      background: url('../images/Group 208.svg');
      background-color: black;
   }
 
   .box14 {
-    background-color: red;
      grid-area: box14;
-     background: url('../images/Group 208.svg');
      background-color: black;
    }
    .container5 {
      display: grid;
      position: relative;
-     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-     grid-template-rows: 1fr ;
+     grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
+     grid-template-rows: 1fr 1fr  ;
+
      grid-template-areas:
-       "box16 box16 box17 box17 box17"
+       "box15 box15 box15 box16 box16"
+       "box15 box15 box15 box16 box16";
+   }
+
+   .box15 {
+     display: flex;
+     align-items: center;
+     justify-content: space-around;
+     height: 100%;
+     grid-area: box15;
+     background-color: black;
    }
 
    .box16 {
-     background-color: magenta;
+     position:relative;
+     align-items: center;
+     justify-content: space-around;
+     max-width:100%;
+     background: url('../images/Монтажная область 21 1.svg');
      grid-area: box16;
-   }
-
-   .box17 {
-     background-color: blue;
-     grid-area: box17;
    }
    .container6 {
      position: relative;
@@ -207,20 +216,23 @@
       vertical-align: top;
         object-fit: cover;
    }
-   
+
    .im5{
+     display: inline-block;
      width: 100%;
      height: 100%;
       position: relative;
       object-fit: cover;
    }
    .im5.1{
+     display: inline-block;
      width: 100%;
      height: 100%;
       position: relative;
       object-fit:fill;
    }
    .im5.2{
+     display: inline-block;
      position: relative;
      width: 100%;
      height: 100%;
@@ -281,70 +293,83 @@
       object-fit: cover;
    }
    .im13{
-     display: grid;
      width: 100%;
       height: 100%;
       position: relative;
-      align-items: top;
-      object-fit: cover;
+      display: inline-block;
+      vertical-align: top;
+   }
    }
    .im14{
-     display: grid;
      width: 100%;
-      height: 100%;
       position: relative;
-      align-items: top;
-      object-fit: cover;
+      display: inline-block;
+      align-items: center;
+        object-fit: cover;
    }
-.text{
-    width: 100%;
-    background: #FF029C;
-    padding: 20px;
-    -webkit-box-sizing: border-box;
-   }
-}
-  @-webkit-keyframes scroll {
-    0% {
-        -webkit-transform: translate(0, 0);
-        transform: translate(0, 0);
-    }
-    100% {
-        -webkit-transform: translate(-100%, 0);
-        transform: translate(-100%, 0)
-    }
-}
+     .im15{
+       width: 100%;
+        height: 100%;
+        position: relative;
+        display: inline-block;
+        vertical-align: top;
+     }
+       .im16{
+         width: 100%;
+          position: relative;
+          display: inline-block;
+          align-items: center;
+            object-fit: cover;
+        }
+        .text{
+            width: 100%;
+            background: #FF029C;
+            padding: 20px;
+            -webkit-box-sizing: border-box;
+           }
+        }
+          @-webkit-keyframes scroll {
+            0% {
+                -webkit-transform: translate(0, 0);
+                transform: translate(0, 0);
+            }
+            100% {
+                -webkit-transform: translate(-100%, 0);
+                transform: translate(-100%, 0)
+            }
+        }
 
-@-moz-keyframes scroll {
-    0% {
-        -moz-transform: translate(0, 0);
-        transform: translate(0, 0);
-    }
-    100% {
-        -moz-transform: translate(-100%, 0);
-        transform: translate(-100%, 0)
-    }
-}
+        @-moz-keyframes scroll {
+            0% {
+                -moz-transform: translate(0, 0);
+                transform: translate(0, 0);
+            }
+            100% {
+                -moz-transform: translate(-100%, 0);
+                transform: translate(-100%, 0)
+            }
+        }
 
-@keyframes scroll {
-    0% {
-        transform: translate(0, 0);
-    }
-    100% {
-        transform: translate(-100%, 0)
-    }
-}
+        @keyframes scroll {
+            0% {
+                transform: translate(0, 0);
+            }
+            100% {
+                transform: translate(-100%, 0)
+            }
+        }
 
-.marquee {
-    display: block;
-    width: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-}
+        .marquee {
+            display: block;
+            width: 100%;
+            white-space: nowrap;
+            overflow: hidden;
+        }
 
-.marquee span {
-    display: inline-block;
-    padding-left: 100%;
-    -webkit-animation: scroll 20s infinite linear;
-    -moz-animation: scroll 50s infinite linear;
-    animation: scroll 10s infinite linear;
-}
+        .marquee span {
+            display: inline-block;
+            padding-left: 100%;
+            -webkit-animation: scroll 20s infinite linear;
+            -moz-animation: scroll 50s infinite linear;
+            animation: scroll 10s infinite linear;
+        }
