--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -3,3 +3,23 @@
   }
   @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
   /* iPad */
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr ;
+    grid-template-rows: 0.5fr 0.5fr ;
+    grid-template-areas:
+      "box1 box2 box2 box3 box4"
+      "box1 box5 box5 box3 box6";
+  }
+
+  .box1 { grid-area: box1; }
+
+  .box4 { grid-area: box4; }
+
+  .box2 { grid-area: box2; }
+
+  .box3 { grid-area: box3; }
+
+  .box5 { grid-area: box5; }
+
+  .box6 { grid-area: box6; }
