--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -297,6 +297,14 @@
         display: inline-block;
         vertical-align: top;
      }
+     .im17{
+       width: 100%;
+        height: 100%;
+        position: fixed;
+        display: inline-block;
+        vertical-align: top;
+
+     }
        .im16{
          width: 100%;
           position: relative;
