--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -156,7 +156,7 @@
      display: grid;
      position: relative;
      grid-template-columns: 1fr 1fr 1fr 1fr ;
-     grid-template-rows: 2fr   ;
+     grid-template-rows: 1fr  1fr ;
      grid-template-areas:
        "box15 box15 box15 box16 box16"
        "box15 box15 box15 box16 box16";
@@ -183,9 +183,8 @@
    .container6 {
      position: relative;
      display: grid;
-     grid-template-columns: 1fr;
-     grid-template-rows: 0.5fr;
-     grid-auto-columns: 1fr;
+     grid-template-columns: 1fr 1fr;
+     grid-template-rows: 1fr
      grid-auto-flow: row;
      grid-template-areas:
        ".";
@@ -219,9 +218,15 @@
       vertical-align: top;
         object-fit: cover;
    }
-
-
+   .eyes3{
+     width: 100%;
+      height: 100%;
+      position: relative;
+      display: inline-block;
+      vertical-align: top;
+      object-fit: cover;
    }
+   .im5
    .im6{
      width: 100%;
       height: 100%;
