--- a/stylesheets/animation.css
+++ b/stylesheets/animation.css
@@ -1,3 +1,49 @@
-.im4{
-  
+.rotate-diagonal-2 {
+	-webkit-animation: rotate-diagonal-2 0.4s linear both;
+	        animation: rotate-diagonal-2 0.4s linear both;
+}
+@-webkit-keyframes scroll {
+  0% {
+      -webkit-transform: translate(0, 0);
+      transform: translate(0, 0);
+  }
+  100% {
+      -webkit-transform: translate(-100%, 0);
+      transform: translate(-100%, 0)
+  }
+}
+
+@-moz-keyframes scroll {
+  0% {
+      -moz-transform: translate(0, 0);
+      transform: translate(0, 0);
+  }
+  100% {
+      -moz-transform: translate(-100%, 0);
+      transform: translate(-100%, 0)
+  }
+}
+
+@keyframes scroll {
+  0% {
+      transform: translate(0, 0);
+  }
+  100% {
+      transform: translate(-100%, 0)
+  }
+}
+
+.marquee {
+  display: block;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.marquee span {
+  display: inline-block;
+  padding-left: 100%;
+  -webkit-animation: scroll 20s infinite linear;
+  -moz-animation: scroll 50s infinite linear;
+  animation: scroll 10s infinite linear;
 }
