--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -10,7 +10,7 @@
 
 
 .box1 {
-  background-color: blue;
+  background-color: black;
   grid-area: box1;
 }
 
@@ -220,13 +220,12 @@
    }
    .eyes3{
      width: 100%;
-      height: 100%;
       position: relative;
-      display: inline-block;
-      vertical-align: top;
+      display: flex;
+      vertical-align: center;
       object-fit: cover;
    }
-   
+
    .im6{
      width: 100%;
       height: 100%;
@@ -287,6 +286,15 @@
       display: inline-block;
       vertical-align: top;
    }
+   .line{
+     width: 31.429vw;
+  height: 1.143vw;
+  left: 71.429vw;
+  top: 57.071vw;
+  animation:lineanim 2s infinite;
+      position: absolute;
+      display: inline-block;
+      vertical-align: top;
    }
    .im14{
      width: 100%;
@@ -323,49 +331,4 @@
             padding: 20px;
             -webkit-box-sizing: border-box;
            }
-        }
-          @-webkit-keyframes scroll {
-            0% {
-                -webkit-transform: translate(0, 0);
-                transform: translate(0, 0);
-            }
-            100% {
-                -webkit-transform: translate(-100%, 0);
-                transform: translate(-100%, 0)
-            }
-        }
-
-        @-moz-keyframes scroll {
-            0% {
-                -moz-transform: translate(0, 0);
-                transform: translate(0, 0);
-            }
-            100% {
-                -moz-transform: translate(-100%, 0);
-                transform: translate(-100%, 0)
-            }
-        }
-
-        @keyframes scroll {
-            0% {
-                transform: translate(0, 0);
-            }
-            100% {
-                transform: translate(-100%, 0)
-            }
-        }
-
-        .marquee {
-            display: block;
-            width: 100%;
-            white-space: nowrap;
-            overflow: hidden;
-        }
-
-        .marquee span {
-            display: inline-block;
-            padding-left: 100%;
-            -webkit-animation: scroll 20s infinite linear;
-            -moz-animation: scroll 50s infinite linear;
-            animation: scroll 10s infinite linear;
         }
