--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -264,11 +264,14 @@
       object-fit: fill;
    }
    .im8{
-     width: 50vw;
+     width: 100%;
       height: 100%;
       position: relative;
-      display: inline-block;
       object-fit: cover;
+   }
+   .t1{
+     position: absolute;
+     vertical-align: top;
    }
    .im9{
      width: 10vw;
@@ -280,7 +283,7 @@
       width: 100%;
       height: 100%;
       position: absolute;
-      animation: im10 3s infinite;
+      animation: im10 2s infinite;
    }
    @keyframes im10 {
      35%{transform: rotate(20deg);}
@@ -309,7 +312,16 @@
      width: 80%;
       height: 80%;
       position: absolute;
-      top:3.9vw;
+
+    }
+    .im13{
+      animation: im13 4s infinite;
+    }
+@keyframes im13 {
+        0%{left:0;}
+        50%{left: -50vw;}
+        100%{left:0;}
+
 
    }
    .im14{
