--- a/stylesheets/animation.css
+++ b/stylesheets/animation.css
@@ -44,3 +44,50 @@
   -moz-animation: scroll 50s infinite linear;
   animation: scroll 10s infinite linear;
 }
+}
+@keyframes im10 {
+  35%{transform: rotate(20deg);}
+  70%{transform: rotate(-20deg);}
+
+}
+@keyframes im13 {
+        0%{left:0;}
+        50%{left: -50vw;}
+        100%{left:0;}
+
+
+   }
+   .im14{
+     width: 100%;
+      position: relative;
+      display: inline-block;
+      align-items: center;
+        object-fit: cover;
+   }
+     .im15{
+       width: 100%;
+        height: 100%;
+        position: relative;
+        display: inline-block;
+        vertical-align: top;
+     }
+     .im17{
+        height: 70%;
+        position: absolute;
+        vertical-align: center;
+     }
+     .im17{
+       animation: opacity 5s infinite;
+     }
+     @-webkit-keyframes opacity {
+    50% {opacity: 0;}
+}
+.im16{
+  width: 100%;
+  position: absolute;
+  /* animation: im16 1s infinite; */
+  }
+  @keyframes im16 {
+    0%{top:0;}
+    50%{top:-18vw;}
+    100%{top:0;}
