--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,30 +1,35 @@
-@media only screen and (min-width: 1224px) and (max-device-width: 1400px){
-  /* Desktop */
-  }
-  @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-  /* iPad */
-  .container {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+  /* iPad Portrait */
+  .container{
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr 1fr ;
-    grid-template-rows: 0.5fr  ;
+    grid-template-columns: 1fr 1fr 1fr   ;
+    grid-template-rows: 1fr 1fr;
     grid-template-areas:
       "box1 box2 box2 box3 box4"
       "box1 box5 box5 box3 box6";
   }
 
   .box1{
-     height: 10vw;
+     height: 1.5vw;
+     grid-area: box1;
   }
-  .box4{
-     height: 7vw;
-  }
-  .box7{
-     height: 7vw;
-  }
-  .box10{
-     height: 7vw;
-  }
-  .box12{
-     height: 7.8125vw;
-     background-color: #7fffd4;
-  }
+  .box2 {
+    weight:100%;
+    height: 1vw;
+    grid-area: box2; }
+
+  .box3 {
+    height: 2vw;
+    grid-area: box3; }
+
+  .box4 {
+    height: 2vw;
+    grid-area: box4; }
+
+  .box5 {
+    height: 1vw;
+     grid-area: box5; }
+
+  .box6 {
+    height: 2vw;
+    grid-area: box6; }
