--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -53,9 +53,6 @@
    }
 
 .box5 {
-  /* display: flex;
-  align-items: center;
-  justify-content: space-around; */
   position: relative;
   max-width:100%;
     background-color: black;
@@ -63,6 +60,7 @@
    }
 
 .box6 {
+  max-width:100%;
   background-color: black;
    grid-area: box6;
  }
@@ -208,11 +206,8 @@
    .im2{
       width: 70%;
       height: 70%;
-
-      /* position: absolute; */
-      /* display: inline-block;
-      vertical-align: top; */
    }
+
    .im3{
      width: 100%;
       position: relative;
@@ -228,7 +223,7 @@
         object-fit: cover;
    }
    .eyes3{
-  position: absolute;
+  position: relative;
   display:flex;
      width: 100%;
      height: 100%;
@@ -240,15 +235,13 @@
 .im5{
   /* height:21.5vw; */
 }
-.ball{
-  width: 5vw;
-  height: 10vw;
-  background-color: black;
-}
 .im5.1{
   height:21.5vw;
 }
-
+.ball{
+  position: absolute;
+  weight:50%;
+}
 .im5.2{
   /* height:21.5vw; */
 }
@@ -256,9 +249,7 @@
    .im6{
      width: 100%;
       height: 100%;
-      position: relative;
-      display: inline-block;
-      vertical-align: top;
+
       object-fit: cover;
    }
    .im7{
@@ -271,7 +262,6 @@
    .im8{
      width: 100%;
       height: 100%;
-      position: relative;
       object-fit: cover;
    }
    .t1{
@@ -298,18 +288,16 @@
 
 
    .im11{
-     display: flex;
+     display: grid;
      width: 100%;
       height: 100%;
-      position: relative;
       align-items: center;
-      object-fit: fill;
+      object-fit: cover;
    }
    .im12{
-     display: flex;
+     display: grid;
      width: 100%;
       height: 100%;
-      position: relative;
       align-items: center;
       object-fit: cover;
    }
@@ -349,9 +337,9 @@
         vertical-align: center;
      }
      .im17{
-       animation: opacity 5s infinite;
+       animation: im17 5s infinite;
      }
-     @-webkit-keyframes opacity {
+     @-webkit-keyframes im17 {
     50% {opacity: 0;}
 }
 .im16{
