--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -1,23 +1,8 @@
-.container {
-  display: grid;
-  position: relative;
-  grid-template-columns: 1.21fr 3.95fr 1fr 2fr ;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-areas:
-    "box1 b2 box3 box4"
-    "box1 b2 box3 box6"
-    "box1 b5 box3 box6"
-}
 
-
-.box1 {
-  background-color: black;
-  grid-area: box1;
-}
 
 .box2 {
       position:relative;
-      /* display: flex;
+       display: grid;
       align-items: center; */
       /* justify-content: space-around; */
       height: 100%;
@@ -68,7 +53,7 @@
   display: grid;
   position: relative;
   grid-template-columns: 1fr 3fr 1fr 2fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-auto-rows: 1fr 1fr 1fr;
   grid-template-areas:
     "box7 box7 box7 box7 box8 box8"
     "box9 box10 box10 box10 box8 box8"
@@ -81,7 +66,6 @@
 }
 
 .box8 {
-  display: inline-block;
   position:relative;
   align-items: center;
   justify-content: space-around;
@@ -260,13 +244,10 @@
       object-fit: fill;
    }
    .im8{
+     position: relative;
      width: 100%;
       height: 100%;
       object-fit: cover;
-   }
-   .t1{
-     position: absolute;
-     vertical-align: top;
    }
    .im9{
      width: 10vw;
