--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,36 +1,6 @@
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-  /* iPad Portrait */
-  /*.container{
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr 1fr;   ;
-    grid-template-rows: 2fr 1fr 1fr;
-    grid-template-areas:
-    "box1 box2 box3 box4"
-    "box1 box2 box3 box6"
-
+  .container2{
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "b1 b1"
   }
-
-  .box1{
-     height: 1.7vw;
-     grid-area: box1;
-  }
-  .box2 {
-    weight:100%;
-    height: 2.4vw;
-    grid-area: box2; }
-
-  .box3 {
-    height: 20vw;
-    grid-area: box3; }
-
-  .box4 {
-    height: 20vw;
-    grid-area: box4; }
-
-  .box5 {
-    height: 2.7vw;
-     grid-area: box5; }
-
-  .box6 {
-    height: 20vw;
-    grid-area: box6; }/
