--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,6 +1,4 @@
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-  .container2{
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: "b1 b1"
-  }
+.h1{
+  font-size: 90px;
+}
