--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -107,14 +107,12 @@
 
 
  .box11 {
-   position:relative;
    align-items: center;
    justify-content: space-around;
    width:100%;
     grid-area: box11;
   }
   .box12 {
-    position:relative;
     align-items: center;
     justify-content: space-around;
     max-width:100%;
@@ -132,8 +130,8 @@
   }
 
   .box13  {
-    position:relative;
     max-width:100%;
+    position: relative;
      grid-area: box13;
      background: url('../images/Group 208.svg');
      background-color: black;
@@ -141,7 +139,7 @@
 
   .box14 {
     width:100%;
-    position:relative;
+
     align-items: center;
      grid-area: box14;
      background-color: black;
@@ -185,7 +183,6 @@
    .im1{
      width: 100%;
       height: 100%;
-      position: relative;
       display: inline-block;
       vertical-align: top;
       object-fit: cover;
@@ -242,9 +239,9 @@
    .im7{
      width: 100%;
       height: 100%;
-      position: relative;
       display: inline-block;
-      object-fit: fill;
+
+      animation: im17;
    }
    .im8{
      position: relative;
@@ -252,7 +249,12 @@
       height: 100%;
       object-fit: cover;
    }
-
+.d1{
+  position: absolute;
+  height: 10%;
+  vertical-align: top;
+  padding-left: 30px;
+}
    .im9{
      width: 10vw;
      height: %;
@@ -285,6 +287,9 @@
       height: 100%;
       align-items: center;
       object-fit: cover;
+   }
+   .im12{
+     animation: im12 4s infinite;
    }
    .im13{
      width: 80%;
