--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -2,10 +2,7 @@
 
 .box2 {
       position:relative;
-       display: grid;
-      align-items: center; */
-      /* justify-content: space-around; */
-      height: 100%;
+      height: 65vw;
       background-color: black;
    }
  .container2 {
@@ -23,13 +20,41 @@
   grid-area: box7;
   background-color: black;
 }
+.im7{
+  width: 100%;
+   height: 100%;
+   display: inline-block;
+
+   animation: blink 1s infinite;
+}
+@keyframes blink {
+ 0% {
+    filter:  magenta (200%) saturate(200%);
+ }
+ 25% {
+     filter: none;
+  }
+  50% {
+     filter: brightness(10);
+    transform: scale(1.03);
+  }
+  75% {
+    filter: none;
+  }
+}
 .box8 {
   position:relative;
-  align-items: center;
-  justify-content: space-around;
   max-width:100%;
     background-color: black;
   grid-area: box8;
+}
+
+.t1{
+  position: absolute;
+  font-family:Pomidor;
+  font-size: 6vw;
+  top:8vw;
+  left: 1vw;
 }
 .box9 {
   display: relative;
@@ -46,6 +71,7 @@
    grid-area: box10;
    background: url('../images/Group 208.svg');
    background-color: black;
+   background-size: cover;
 
  }
  .container3 {
@@ -89,6 +115,7 @@
      grid-area: box13;
      background: url('../images/Group 208.svg');
      background-color: black;
+     background-size: cover;
   }
 
   .box14 {
@@ -124,6 +151,7 @@
      grid-area: box16;
      overflow: hidden;
      white-space: nowrap;
+     background-size: cover;
    }
    .container6 {
      position: relative;
@@ -135,11 +163,20 @@
        ".";
    }
    .im1{
-     width: 100%;
-      height: 100%;
-      display: inline-block;
-      vertical-align: top;
-      object-fit: cover;
+     position: absolute;
+     left:20vw;
+     top:8vw;
+     width: 60vw;
+     height: 50vw;
+     animation: im1 1s linear infinite;
+   }
+
+   @keyframes im1 {
+     0% {left:20vw; width: 60vw; height: 50vw;}
+     30% {left:0vw; width: 60vw; height: 50vw;}
+     60% {left:20vw; width: 60vw; height: 50vw;}
+     80%{left:40vw; width: 60vw; height: 50vw;}
+     100% {left:20vw; width: 60vw; height: 50vw;}
    }
    .im2{
       width: 70%;
