--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,26 +1,31 @@
-/* @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+ @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
 .h1{
-  font-size: 90px;
+  font-size: 144px;
 }
-.container2{
-  grid-template-rows: 1fr 1fr 1fr  ;
+.box2{
+  height: 64.9vw;
+}
+.container2 {  display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-areas: "box7"
-  "box9 box10"
-  "box9 box10 "
-}
-.container3{
-  grid-template-rows: 0.5fr 1fr  ;
-  rid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   grid-template-areas:
+    "box2 box2"
+    "box7 box7"
+    "box10 box8";
 }
-.box7{
 
-}
-.box9{
-  height: 8.680vw;;
+.box2 {
+   height: 85.026vw;
+  grid-area: box2; }
 
-}
-.box10{
-  height: 36.25vw;
-} */
+.box7 {
+height: 85.026vw;
+   grid-area: box7; }
+
+.box10 {
+height: 85.026vw;
+   grid-area: box10; }
+
+.box8 {
+height: 85.026vw;
+  grid-area: box8; }
